scenarios/capsule/02-ingress_class/ingress-haproxy-class.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy
spec:
  ingressClassName: external-haproxy
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
