scenarios/capsule/02-ingress_class/ingress-internal-lb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal
spec:
  ingressClassName: internal-lb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
