scenarios/capsule/02-ingress_class/ingress-without-class.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: no-class
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
